--- a/style.css
+++ b/style.css
@@ -212,6 +212,10 @@ form button {
   border-radius: 4px;
   font-size: 16px;
 }
+#availability form .contact-button {
+  display: block;
+  margin: 20px auto;
+}
 
 form label {
   font-weight: normal;
